--- a/Mailchimp demo/article.ipynb
+++ b/Mailchimp demo/article.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 119,
    "id": "9373dfa8-5cc3-4460-a41d-ffd475459204",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "4     NaN     NaN              NaN  NaN   2021/9/26 12:47  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,6 +215,10 @@
     "import pandas as pd\n",
     "\n",
     "# load the dataset as \"data\"\n",
+    "# NOTE: if you wish to run this code with your own data, you can either\n",
+    "## (1) save down your data file to the same folder as this notebook, then replace the \"url\" below with your file name, or\n",
+    "## (2) \n",
+    "url = 'https://raw.githubusercontent.com/magicsheets/content-marketing/main/Mailchimp%20demo/data.csv'\n",
     "data = pd.read_csv('data.csv')\n",
     "\n",
     "# view the top 10 rows of the dataset \n",
